--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-
+<head>
+  <meta charset="UTF-8" />
+  <title>Indian New Updates</title>
+  <meta name="description" content="Latest Indian news, breaking updates, politics, sports and technology." />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
