Add basic HTML structure for updates page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Indian New Updates</title>
   <meta name="description" content="Latest Indian news, breaking updates, politics, sports and technology." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
+<body>
+
+  <h1>Indian New Updates</h1>
+  <p>Welcome! Your GitHub Pages site is live and working.</p>
+
+</body>
+</html>
