Update index.html for new site title and content

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Indian New Updates</title>
-  <meta name="description" content="Latest Indian news, breaking updates, politics, sports and technology." />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My GitHub Pages Site</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Indian New Updates</h1>
+  <h1>Hello World!</h1>
   <p>Welcome! Your GitHub Pages site is live and working.</p>
 </body>
 </html>
