--- a/index.html
+++ b/index.html
@@ -1,13 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Pages Site</title>
-  <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Indian New Updates | Latest News & Breaking Headlines</title>
+
+  <meta name="description" content="Indian New Updates provides the latest Indian news, breaking headlines, politics, technology, entertainment, sports, and trending stories." />
+  <meta name="keywords" content="India news, latest Indian news, breaking news India, Indian updates" />
+  <meta name="author" content="Indian New Updates" />
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #f4f6f8;
+      color: #333;
+    }
+
+    header {
+      background: #ff6f00;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
+    }
+
+    header p {
+      margin-top: 8px;
+      font-size: 1.1rem;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 0 20px;
+    }
+
+    section {
+      background: #fff;
+      padding: 20px;
+      margin-bottom: 20px;
+      border-radius: 6px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    }
+
+    h2 {
+      margin-top: 0;
+      color: #ff6f00;
+    }
+
+    footer {
+      background: #222;
+      color: #ccc;
+      text-align: center;
+      padding: 15px;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Hello World!</h1>
-  <p>Welcome! Your GitHub Pages site is live and working.</p>
+
+  <header>
+    <h1>Indian New Updates</h1>
+    <p>Latest News & Breaking Updates from India</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>Welcome</h2>
+      <p>
+        <strong>Indian New Updates</strong> brings you the most recent and reliable
+        news from across India. Stay informed with breaking headlines, current
+        affairs, politics, technology, entertainment, sports, and trending topics.
+      </p>
+    </section>
+
+    <section>
+      <h2>Our Mission</h2>
+      <p>
+        Our goal is to provide fast, accurate, and easy-to-read news updates so
+        you never miss what’s happening in India.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2026 Indian New Updates. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
