--- a/index.html
+++ b/index.html
@@ -1,68 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Indian New Updates | Latest India News</title>
+  <meta charset="UTF-8" />
+  <title>Indian New Updates – Latest News</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Indian New Updates brings fast, mobile-first news updates with dark mode support." />
 
-<meta name="description" content="Indian New Updates brings you breaking news, trending stories, and daily updates from India.">
-<meta name="robots" content="index, follow">
-
-<style>
-:root{
---bg:#f5f5f5;--text:#222;--card:#fff;--primary:#138808
-}
-body.dark{
---bg:#121212;--text:#eee;--card:#1e1e1e
-}
-body{margin:0;font-family:system-ui;background:var(--bg);color:var(--text)}
-header{background:linear-gradient(90deg,#ff9933,#138808);color:#fff;padding:16px;text-align:center}
-nav{display:flex;justify-content:space-between;padding:10px;background:var(--card)}
-nav a{text-decoration:none;color:var(--text);font-weight:600;margin-right:10px}
-.container{max-width:1000px;margin:auto;padding:15px}
-.news{display:grid;grid-template-columns:1fr;gap:15px}
-.card{background:var(--card);padding:15px;border-radius:8px}
-.card h3{margin:8px 0;color:var(--primary)}
-.card small{opacity:.7}
-footer{text-align:center;padding:15px;font-size:.85rem}
-@media(min-width:700px){.news{grid-template-columns:repeat(2,1fr)}}
-</style>
+  <style>
+    :root {
+      --bg: #ffffff;
+      --text: #111;
+      --card: #f3f3f3;
+    }
+    body.dark {
+      --bg: #121212;
+      --text: #f5f5f5;
+      --card: #1e1e1e;
+    }
+    body {
+      margin: 0;
+      font-family: system-ui, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+    }
+    header {
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: var(--card);
+    }
+    button {
+      padding: 6px 10px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    main {
+      padding: 1rem;
+      max-width: 720px;
+      margin: auto;
+    }
+    .post {
+      background: var(--card);
+      padding: 1rem;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+    }
+    .post h2 {
+      margin: 0 0 0.4rem;
+      font-size: 1.1rem;
+    }
+    .meta {
+      font-size: 0.8rem;
+      opacity: 0.7;
+      margin-bottom: 0.5rem;
+    }
+  </style>
 </head>
 
 <body>
-<header>
-<h1>Indian New Updates</h1>
-<p>Breaking News & Daily Updates from India</p>
-</header>
+  <header>
+    <strong>Indian New Updates</strong>
+    <button onclick="toggleDark()">🌙</button>
+  </header>
 
-<nav>
-<div>
-<a href="/">Home</a>
-</div>
-<button onclick="document.body.classList.toggle('dark')">🌙</button>
-</nav>
+  <main id="posts">
+    <p>Loading news…</p>
+  </main>
 
-<div class="container">
-<div id="news" class="news"></div>
-</div>
+  <script>
+    function toggleDark() {
+      document.body.classList.toggle("dark");
+    }
 
-<footer>© 2026 Indian New Updates</footer>
+    fetch("news.json")
+      .then(res => res.json())
+      .then(data => {
+        const container = document.getElementById("posts");
+        container.innerHTML = "";
 
-<script>
-fetch("news.json")
-.then(res=>res.json())
-.then(data=>{
-const box=document.getElementById("news");
-data.forEach(n=>{
-box.innerHTML+=`
-<div class="card">
-<small>${n.category} • ${n.date}</small>
-<h3>${n.title}</h3>
-<p>${n.excerpt}</p>
-<a href="post.html?id=${n.id}">Read more →</a>
-</div>`;
-});
-});
-</script>
+        data.reverse().forEach(post => {
+          const div = document.createElement("div");
+          div.className = "post";
+          div.innerHTML = `
+            <h2>${post.title}</h2>
+            <div class="meta">${post.category} • ${post.date}</div>
+            <p>${post.excerpt}</p>
+          `;
+          container.appendChild(div);
+        });
+      })
+      .catch(err => {
+        document.getElementById("posts").innerHTML = "Failed to load news.";
+      });
+  </script>
 </body>
 </html>
